<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bar_chart"
            android:layout_width="0dp"
            android:layout_height="300dp"
            app:layout_constraintBottom_toTopOf="@id/ll_results"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_results"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bar_chart">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expected_value" />

                <TextView
                    android:id="@+id/tvExpectedValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dispersion" />

                <TextView
                    android:id="@+id/tvDispersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/standart_deviation" />

                <TextView
                    android:id="@+id/tvStandartDeviation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indirect_signs" />

                <TextView
                    android:id="@+id/tvIndirectSigns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/period" />

                <TextView
                    android:id="@+id/tvPeriod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aperiodic" />


                <TextView
                    android:id="@+id/tvAperiodic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_results">

            <LinearLayout
                android:id="@+id/ll_first_lab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textAlignment="textStart" />

                <com.warkiz.tickseekbar.TickSeekBar
                    android:id="@+id/sbAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tsb_max="300000"
                    app:tsb_min="10000"
                    app:tsb_progress="150000"
                    app:tsb_show_thumb_text="above" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/tvA"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="a"
                        android:inputType="numberSigned"
                        tools:ignore="HardcodedText" />

                    <EditText
                        android:id="@+id/tvR"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="R"
                        android:inputType="numberSigned"
                        tools:ignore="HardcodedText" />

                    <EditText
                        android:id="@+id/tvM"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="m"
                        android:inputType="numberSigned"
                        tools:ignore="HardcodedText" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnGenerate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/generate" />
            </LinearLayout>

            <LinearLayout

                android:id="@+id/ll_second_lab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uniform_distribution" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etUniformA"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="A"
                        android:inputType="numberDecimal|numberSigned"
                        tools:ignore="HardcodedText" />

                    <EditText
                        android:id="@+id/etUniformB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="B"
                        android:inputType="numberDecimal|numberSigned"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnGenerateUniform"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uniform_distribution" />


                <!--Gauss-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gauss_distribution" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etGauss_m"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="m"
                        android:inputType="numberDecimal|numberSigned"
                        tools:ignore="HardcodedText" />

                    <EditText
                        android:id="@+id/etGauss_sigma"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="σ"
                        android:inputType="numberDecimal|numberSigned"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnGenerateGauss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gauss_distribution" />

                <!--Экспоненциальное распределение-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exponential_distribution" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etExponential_lambda"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="λ"
                        android:inputType="numberDecimal|numberSigned"
                        tools:ignore="HardcodedText" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnGenerateExponential"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exponential_distribution" />

                <!-- Гамма-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gamma_distribution" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etGamma_lambda"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="λ"
                        android:inputType="numberDecimal|numberSigned"
                        tools:ignore="HardcodedText" />

                    <EditText
                        android:id="@+id/etGamma_N_int"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="n"
                        android:inputType="numberSigned"
                        tools:ignore="HardcodedText" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnGenerateGamma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gamma_distribution" />

                <!--Треугольное-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/triangle_distribution" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etTriangleA"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="A"
                        android:inputType="numberDecimal|numberSigned"
                        tools:ignore="HardcodedText" />

                    <EditText
                        android:id="@+id/etTriangleB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="B"
                        android:inputType="numberDecimal|numberSigned"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnGenerateTriangle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/triangle_distribution" />

                <!--Simpson-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/simpson_distribution" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etSimpsonA"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="A"
                        android:inputType="numberDecimal|numberSigned"
                        tools:ignore="HardcodedText" />

                    <EditText
                        android:id="@+id/etSimpsonB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="B"
                        android:inputType="numberDecimal|numberSigned"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnGenerateSimpson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/simpson_distribution" />

            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
